<!-- en pom.xml padre definimos los modulos y las dependencias comunes estiona las dependencias comunes para evitar duplicación en los módulos hijos.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.pazzioliweb</groupId>
    <artifactId>mi-proyecto</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
   
    <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
</properties>

<build>
  <plugins>
    <plugin>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-compiler-plugin</artifactId>
      <version>3.11.0</version> <!-- o última disponible -->
    </plugin>
  </plugins>
</build>


    <modules>
        <module>common</module>
        <module>auth</module>
        <module>usuarios</module>
        <module>web</module>
        <module>empresas</module>
        <module>productosmodule</module>
        <module>facturacionmodule</module>
        <module>tercerosmodule</module>
        <module>comprobantesmodule</module>
        <module>cajasmodule</module>
        <module>vendedoresmodule</module>
        <module>metodospagomodule</module>
        <module>movimientosinventariomodule</module>
        <module>comprasmodule</module>
    </modules>
<!--configuracion para gestionar versiones de dependencias configuramos el bom bill 
el cual es org.springframework.boot  esto lo hacemos esto para gestionar  las versiones de despendencias
 más comunes en aplicaciones Spring.Al importar este BOM en tu proyecto, puedes añadir dependencias sin especificar sus versiones, ya que Maven las resolverá automáticamente desde el BOM.-->
   <dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-dependencies</artifactId>
            <version>3.1.2</version> <!-- Asegúrate de usar la versión correcta -->
            <type>pom</type>
            <scope>import</scope>
        </dependency>
    
    </dependencies>
</dependencyManagement>

   <dependencies>
   <dependency>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-web</artifactId>
</dependency>

 <dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			 <version>8.0.33</version> 
		</dependency>
<dependency>
  <groupId>org.flywaydb</groupId>
  <artifactId>flyway-core</artifactId>
</dependency>
   		<dependency>
    <groupId>jakarta.servlet</groupId>
    <artifactId>jakarta.servlet-api</artifactId>
    <version>5.0.0</version>
    <scope>provided</scope>
</dependency>

<dependency>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-data-jpa</artifactId>
</dependency>
 <dependency>
	    <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-data-redis</artifactId>
    </dependency>

    <!-- (opcional) Para convertir objetos a JSON automáticamente -->
    <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
    </dependency>
    <dependency>
    <!-- esto garantiza soporte para apis de fecfa/hora de java8-->
  <groupId>com.fasterxml.jackson.datatype</groupId>
  <artifactId>jackson-datatype-jsr310</artifactId>
</dependency>
<!--esta libreria espara el manejo de transaciones de basedatos 
es importante pora poder tener las librerias de spring para la manipulacion de estas como la libreria jakarta.persistence
que contiene la clase entyti que sirve para crear los modelos nesesarios para la manipulacion de datos-->

    <dependency>
		  <groupId>org.projectlombok</groupId>
  <artifactId>lombok</artifactId>
  <version>1.18.32</version>
  <scope>provided</scope>
		</dependency>
		
		
		<dependency>
    <groupId>io.jsonwebtoken</groupId>
    <artifactId>jjwt-api</artifactId>
    <version>0.11.5</version>
</dependency>
<dependency>
    <groupId>io.jsonwebtoken</groupId>
    <artifactId>jjwt-impl</artifactId>
    <version>0.11.5</version>
    <scope>runtime</scope>
</dependency>
<dependency>
    <groupId>io.jsonwebtoken</groupId>
    <artifactId>jjwt-jackson</artifactId>
    <version>0.11.5</version>
    <scope>runtime</scope>
</dependency>

<dependency>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-validation</artifactId>
</dependency>


   </dependencies>
</project>